[package]
name = "krabbypatty"
description = "A CLI secure password generator."
documentation = "https://github.com/CodeCanna/krabbypatty"
readme = "README.md"
repository = "https://github.com/CodeCanna/krabbypatty"
homepage = "https://github.com/CodeCanna/krabbypatty"
keywords = ["cli", "password", "generator", "password_generator"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
rand = { version = "0.9.2", features = ["std_rng"] }
rand_pcg = "0.9.0"
rand_seeder = "0.4.0"
thiserror = "2.0.17"
